contact view structure finish

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,7 +1,7 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --green: #95C11F;
-  --green-opaque: #96c11f60;
+  --green: #96c11f;
+  --green-opaque: #96c11f93;
   --dark: #000000;
   --dark-black: #1a1a1a;
   --dark-black-opaque: #1a1a1afa;
