--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -2,6 +2,7 @@
 :root {
   --green: #96c11f;
   --green-opaque: #96c11f93;
+  --green-dark: #96c11f48;
   --dark: #000000;
   --dark-black: #1a1a1a;
   --dark-black-opaque: #1a1a1afa;
